# GPJax

./: .gitignore  README.org  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: svgp_regression.ipynb
examples/classification/: binary_svgp_classification.ipynb  svgp_classification.py
examples/regression/: svgp_regression.ipynb
gpjax/: base.py  conditionals.py  covariances.py  custom_types.py  datasets.py  kullback_leiblers.py  logdensities.py  mean_functions.py  quadrature.py
gpjax/config/: __config__.py  __init__.py
gpjax/custom_types/: __init__.py  custom_types.py  shapes.py
gpjax/kernels/: __init__.py  base.py  distances.py  multioutput.py  stationaries.py
gpjax/likelihoods/: __init__.py  base.py  scalar_continuous.py  scalar_discrete.py
gpjax/models/: __init__.py  gp.py  model.py  svgp.py
gpjax/parameters/: __init__.py  transforms.py
gpjax/prediction/: __init__.py  gp.py
gpjax/utilities/: __init__.py  bijectors.py  ops.py
tests/: test_kernels.py  test_mean_functions.py  test_models.py  test_multioutput_kernels.py
