[tool.poetry]
name = "GPJax"
version = "0.1.0"
description = "Minimal Gaussian process library in JAX."
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
jax = "0.*"
jaxlib = "0.1.56"
matplotlib = "^3.3.2"
scipy = "1.*"
python-language-server = "^0.36.1"
jupyter = "^1.0.0"
# dm-haiku = "^0.0.2"
objax = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
