[tool.poetry]
name = "GPJax"
version = "0.1.0"
description = "Minimal Gaussian process library in JAX with custom state management."
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]

[tool.poetry.dependencies]
# dataclasses is built-in for python ^3.8 (but not earlier) and Poetry can't handle conditional dependencies in
# other packages (e.g. chex) so we set python ^3.8. Python 3.6 should work using pip...
python = "^3.8"
# python = ">=3.6,<3.7"  
# python = ">=3.6,<3.10"  
numpy = "^1.19.4"
# jax = "^0.2.5"
# jax = "0.2.11"
jax = "^0.2.13"
jaxlib = "^0.1.59"
matplotlib = "^3.3.2"
jupyter = "^1.0.0"
chex = "^0.0.7"
mypy = "^0.812"
multidispatch = "^0.2"
dataclasses = { version = "*", python = "^3.6.0" }
tensor-annotations = {git = "https://github.com/deepmind/tensor_annotations"}
torch = "^1.8.1"  # used for datasets in datasets.py
tfp-nightly = "^0.13.0-alpha.20210510"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-language-server = "^0.36.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
